[project]
name = "electronscatteringdatabase"
version = "0.1.0"
description = "preparing huggingface database from the Quasielastic Electron Nucleus Scattering Archive"
authors = [
    {name = "AnnaErsh",email = "aershova096@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
